<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <!-- Titutlo Principal y Division -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/FuenteTitulos">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/logo_tech" />

            <TextView
            android:id="@+id/TituloRegistrarse1"
            style="@style/FuenteTitulos"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/_strTitleRegistrarse"
            android:textAlignment="center" />

            </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/textodivision"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Titulo Nombre -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textLabelNombreCompleto"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_srtReg_Nombre"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_Reg_NombreCompleto"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textLabelemail"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_srtReg_Email"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_Reg_Email"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <!-- Password y confirmacion de Password -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_LabelPass1"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_srtReg_Password1"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_Reg_Password1"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textViewLabelPass2"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_srtReg_ConfirmarPassword"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_Reg_Password2"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

            </LinearLayout>

            <!-- EMpresa -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textLabelEMpresa"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_srtReg_Empresa"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_Reg_Empresa"
                    style="@style/FuenteTipoTituloBlanco"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <!-- Botones de Registrarse y Recordar -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView4"
                    style="@style/textodivision"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
                <Button
                    android:id="@+id/boton_Reg_registrarse"
                    style="@style/Style_Buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_srtReg_BotonRegistrarse"
                    />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>

